--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,35 @@
-stages:
-  - lint
-  - test
+name: CI
 
-variables:
-  PIP_CACHE_DIR: "$MODULE_30_CI_LINTERS/.cache/pip"
+on:
+  push:
+    branches: ["**"]
+  pull_request:
+    branches: ["**"]
 
-before_script:
-  - python -V
-  - pip install --upgrade pip
-  - pip install -r requirements.txt
+jobs:
+  lint-and-test:
+    runs-on: ubuntu-latest
 
-lint:
-  stage: lint
-  script:
-    - pip install flake8
-    - flake8 .
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-test:
-  stage: test
-  script:
-    - pytest
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"  # замени на нужную версию, если другая
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest flake8 black
+
+      - name: Run flake8 (линтер)
+        run: flake8 .
+
+      - name: Run black (форматтер, только проверка)
+        run: black . --check
+
+      - name: Run tests
+        run: pytest
